--- a/documentation/LICENSE.html
+++ b/documentation/LICENSE.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Spark Changelog</title>
+<title>Spark License</title>
 <style type="text/css">
 /* global font and body settings */
 body {
@@ -171,7 +171,7 @@ hr {
 <div id="pageContainer">
 
 <div id="pageHeader">
-    <h1>Spark Readme</h1>
+    <h1>Spark License</h1>
 </div>
 <div class="navigation">
     <a href="README.html">Readme</a>|<a href="changelog.html">Changelog</a>|<a href="LICENSE.html">License</a>
@@ -372,6 +372,9 @@ of your accepting any such warranty or additional liability.<o:p></o:p></p>
 
 </div>
 
+<div class="footer">
+    Copyright &copy; Jive Software, 2006-2011
+</div>
 </body>
 
 </html>
