--- a/documentation/README.html
+++ b/documentation/README.html
@@ -224,3 +224,6 @@ All icons and images in Spark owned by INCORS GmbH or Jive Software are provided
 <span>laws of <st1:place w:st="on"><st1:State w:st="on">Oregon</st1:State></st1:place>. If any provision of this License Agreement is held to be<o:p></o:p></span>
 <span>unenforceable, this License Agreement will remain in effect with the provision<o:p></o:p></span>
 <span>omitted.</span>      </pre>
+<div class="footer">
+    Copyright &copy; Jive Software, 2006-2011
+</div>
