--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -201,6 +201,8 @@ hr {
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1358'>SPARK-1358</a>] - Reduce Filetransfer size in corporate environments</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1359'>SPARK-1359</a>] - Plugin Blacklist</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1369'>SPARK-1369</a>] - When debugger enabled should be able to send raw packets somehow</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1379'>SPARK-1379</a>] - Support for XEP-0147</li>
+
 </ul>
 
 <h3>Bug Fixes</h3>
