updating changelog for 2.6.1 release
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12522 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,8 +178,8 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>2.6.1 -- <span style="font-weight: normal;">June 17th, 2011</span></h2>
-<h3> New Feature </h3>
+<h2>2.6.1 -- <span style="font-weight: normal;">June 22th, 2011</span></h2>
+<h3> New Features </h3>
 <ul>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-548'>SPARK-548</a>] - Animated GIFs as Avatars</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-884'>SPARK-884</a>] - OTR support for chat</li>
@@ -193,6 +193,7 @@ hr {
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1334'>SPARK-1334</a>] - Add the login server as STUN server to spark.properties</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1335'>SPARK-1335</a>] - Spark should save received broadcast messages in the chat history</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1343'>SPARK-1343</a>] - Broadcast window covers whole screen if message is longer than {1*10^x , x∈R&gt;5} characters</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1345'>SPARK-1345</a>] - removed ugly Look&Feels from selection menu</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1346'>SPARK-1346</a>] - PluginLoader should get a &lt;minJava&gt;1.x.x_xx&lt;/minJava&gt; tag</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1347'>SPARK-1347</a>] - apple plugin needs configurable behaviour</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1348'>SPARK-1348</a>] - Make possible to set Join on startup from other interface</li>
@@ -213,6 +214,7 @@ hr {
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1095'>SPARK-1095</a>] - Nested groups are not sorted by name</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1200'>SPARK-1200</a>] - Context menu doesn&#39;t show up in chat input area on Windows 7</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1207'>SPARK-1207</a>] - Linux version of Spark quits when doing logout</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1235'>SPARK-1235</a>] -  fixed some issues with CTRL-F,E and T dialogs</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1253'>SPARK-1253</a>] - Transport icons disappear after saving preferences</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1274'>SPARK-1274</a>] - Reverse alphabetical sorting of participants in the group chat</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1275'>SPARK-1275</a>] - contact add loses connection when no username provided</li>
@@ -230,6 +232,8 @@ hr {
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1351'>SPARK-1351</a>] - Remove plugins does not remove plugins</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1357'>SPARK-1357</a>] - When in fullscreen mode and switching to smaller screen, spark doesnt rezise to fit smaller screen</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1374'>SPARK-1374</a>] - Spark freezes on close</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1376'>SPARK-1376</a>] - Fixed the "Check for new Version"</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1385'>SPARK-1385</a>] - Format Bug in Transcript</li>
 </ul>
 
 <h2>2.6.0 -- <span style="font-weight: normal;">May 6th, 2011</span></h2>
