updated documentation/README.html and documentation/changelog.html for 2.6.2
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12534 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,22 @@ hr {
 </div>
 
 <div id="pageBody">
+
+<h2>2.6.2  Hot Fix  -- <span style="font-weight: normal;">June 23rd, 2011</span></h2>
+
+
+Highlights: 
+<ul>
+	<li>Support XMPP servers without ability to manage privacy lists</li>
+</ul>	
+
+<h3>        Bug fix 
+</h3>
+</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SMACK-338'>SMACK-338</a>] -         IBB filetransfer doesn&#39;t work as expected
+</li>
+
+
 <h2>2.6.1  all resolved issues in Spark and Smack -- <span style="font-weight: normal;">June 22nd, 2011</span></h2>
 
 Highlights: 
