SPARK-1399 updated README.html
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12552 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/README.html
+++ b/documentation/README.html
@@ -178,7 +178,7 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>Version 2.6.2 <br/>Released June 23rd, 2011</h2>
+<h2>Version 2.6.3 <br/>Released July 1st, 2011</h2>
 
 Thank you for choosing Spark!</br>
 Spark is a full-features instant messaging (IM) and groupchat client that uses the XMPP protocol.</br>
