--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -179,6 +179,28 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.6.3    -- <span style="font-weight: normal;">July 1st, 2011</span></h2>
+
+
+Highlights: 
+<ul>
+	<li>Bug Fixes only</li>
+</ul>	
+
+<h3>        Bug fix </h3>
+<ul>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-615'>SPARK-615</a>] - Fixed issue with XMPP URI conference chats.</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-740'>SPARK-740</a>] - XMPP URI not working in IE</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1379'>SPARK-1379</a>] - Support for XEP-0147</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1383'>SPARK-1383</a>] - Login screen shows disabled fields.</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1392'>SPARK-1392</a>] - Check if Spark is really checking for updates even if that option is turned off</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1394'>SPARK-1394</a>] - Search in history is not working</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1395'>SPARK-1395</a>] - NPE when exiting a chat window with ESC </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1396'>SPARK-1396</a>] - Send Broadcast Window doesn't show when not using JTattoo</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1398'>SPARK-1398</a>] - scrollToBottom causes UiThreadingViolationException when using Substance Skins </li>
+</ul>
+
+
 <h2>2.6.2  Hot Fix  -- <span style="font-weight: normal;">June 23rd, 2011</span></h2>
 
 
@@ -189,10 +211,9 @@ Highlights:
 
 <h3>        Bug fix 
 </h3>
-</li>
-<li>[<a href='http://issues.igniterealtime.org/browse/SMACK-338'>SMACK-338</a>] -         IBB filetransfer doesn&#39;t work as expected
-</li>
-
+<ul>
+<li>[<a href='http://issues.igniterealtime.org/browse/SMACK-338'>SMACK-338</a>] - IBB filetransfer doesn&#39;t work as expected</li>
+</ul>
 
 <h2>2.6.1  all resolved issues in Spark and Smack -- <span style="font-weight: normal;">June 22nd, 2011</span></h2>
 
