SPARK-1491: Update Polish translation -added roar plugin to spark build xml so changes on this plugin will have effect on new build -increase version of affected plugins
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@13730 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/transferguard/changelog.html
+++ b/src/plugins/transferguard/changelog.html
@@ -44,6 +44,11 @@
 TransferGuard Spark plug Changelog
 </h1>
 
+<p><b>1.0.2</b> -- August 15th, 2013</p>
+<ul>
+     <li>Updated polnish language file.</li>
+</ul>
+
 <p><b>1.0.1</b> -- September 19th, 2006</p>
 <ul>
      <li>Moving over to be Spark 2.0 compatible.</li>
