Update changelog for Spark 2.7.4 Release

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -182,6 +182,52 @@ hr {
 
 
 
+<h2>2.7.4    -- <span style="font-weight: normal;">December 18, 2015</span></h2>
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-847'>SPARK-847</a>] -         &quot;Contact List font size&quot; not applied to Offline users group
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1066'>SPARK-1066</a>] -         Proxy is not working
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1576'>SPARK-1576</a>] -         Spark is not showing room participants when presence icons should be showing
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1592'>SPARK-1592</a>] -         Should not show &#39;Send a file&#39; menu when file transfer is disabled
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1645'>SPARK-1645</a>] -         Notifications settings disappear when updates are disabled via default.properties
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1648'>SPARK-1648</a>] -         Toast popups are not shown for group chat messages
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1650'>SPARK-1650</a>] -         A &#39;default&#39; directory should not be required when selecting files to transfer
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1658'>SPARK-1658</a>] -         NullPointerExceptions when joining an anonymous MUC
+</li>
+</ul>
+        
+<h2>        Improvement
+</h2>
+<ul>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1651'>SPARK-1651</a>] -         Add i18n translation for Transfer Guard plugin&#39;s name in the Preferences
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1652'>SPARK-1652</a>] -         Add scrollbar in Emoticon picker
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1655'>SPARK-1655</a>] -         Updated Russian translation
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1656'>SPARK-1656</a>] -         Update Chinese (Traditional) translation
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1659'>SPARK-1659</a>] -         Another Russian translation update
+</li>
+</ul>
+    
+<h2>        New Feature
+</h2>
+<ul>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1644'>SPARK-1644</a>] -         Add an option to hide auto login checkbox along with the save password box
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1653'>SPARK-1653</a>] -         Add Chinese (Traditional) translation for Transfer Guard plugin
+</li>
+</ul>
+
 <h2>2.7.3    -- <span style="font-weight: normal;">October 23, 2015</span></h2>
 <h2>        Bug
 </h2>
