Denote Spark 2.7.5 Release

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -182,6 +182,40 @@ hr {
 
 
 
+<h2>2.7.5    -- <span style="font-weight: normal;">January 14, 2016</span></h2>
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1664'>SPARK-1664</a>] -         RPM build fails after Smack library update
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1669'>SPARK-1669</a>] -         Fix Lithuanian translation of Tic Tac Toe game
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1672'>SPARK-1672</a>] -         Spark is not showing &quot;(Offline)&quot; prefix for offline messages on Openfire 4.0.0
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1673'>SPARK-1673</a>] -         Only first offline message is shown
+</li>
+</ul>
+        
+<h2>        Improvement
+</h2>
+<ul>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1091'>SPARK-1091</a>] -         Create an installer for Mac OS X
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1661'>SPARK-1661</a>] -         Change &quot;on phone&quot; to &quot;on the phone&quot;
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1663'>SPARK-1663</a>] -         Update jarbundler and ant build file
+</li>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1666'>SPARK-1666</a>] -         Update Simplified Chinese translation
+</li>
+</ul>
+    
+<h2>        New Feature
+</h2>
+<ul>
+<li>[<a href='https://igniterealtime.org/issues/browse/SPARK-1668'>SPARK-1668</a>] -         Lithuanian translation for the Battleships game
+</li>
+</ul>
+
 <h2>2.7.4    -- <span style="font-weight: normal;">December 18, 2015</span></h2>
 <h2>        Bug
 </h2>
