SMACK4: Fixed obtaining a MultiUserChatManager instance.

--- a/documentation/sparkplug_dev_guide.html
+++ b/documentation/sparkplug_dev_guide.html
@@ -791,9 +791,10 @@ public class SearchMe implements Searchable {
 
         // Get the service name you wish to use.
         try {
-            serviceNames = MultiUserChat.getServiceNames(SparkManager.getConnection());
+            final MultiUserChatManager multiUserChatManager = MultiUserChatManager.getInstanceFor( SparkManager.getConnection() );
+            serviceNames = multiUserChatManager.getServiceNames();
         }
-        catch (XMPPException e) {
+        catch (Exception e) {
             e.printStackTrace();
         }
 
