Denote Spark 2.8.1 Release

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -179,6 +179,45 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.8.1    -- <span style="font-weight: normal;">October 1, 2016</span></h2>
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1786'>SPARK-1786</a>] -         Wrong error message when a server is unavailable
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1799'>SPARK-1799</a>] -         Fix url to Spark forums on the help menu
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1801'>SPARK-1801</a>] -         Fix links opening in KDE environment
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1804'>SPARK-1804</a>] -         Unsupported iteration removal function used.
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1808'>SPARK-1808</a>] -         ContactList does not act on &#39;subscribed&#39; event
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1812'>SPARK-1812</a>] -         Some vCard fields are empty when checking contact&#39;s profile
+</li>
+</ul>
+        
+<h2>        New Feature
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1787'>SPARK-1787</a>] -         Add option to disable TLS hostname verification 
+</li>
+</ul>
+            
+<h2>        Improvement
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1788'>SPARK-1788</a>] -         Update translations
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1790'>SPARK-1790</a>] -         Rename Server field to Domain
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1798'>SPARK-1798</a>] -         Exception thrown by listener should be handled
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-1805'>SPARK-1805</a>] -         PrivacyManager should log exceptions in log
+</li>
+</ul>
+
+
 <h2>2.8.0    -- <span style="font-weight: normal;">August 25, 2016</span></h2>
 <h2>        Bug
 </h2>
