--- a/documentation/README.html
+++ b/documentation/README.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Spark Changelog</title>
+<title>Spark Readme</title>
 <style type="text/css">
 /* global font and body settings */
 body {
@@ -178,17 +178,14 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>Version 2.6.3 <br/>Released July 1st, 2011</h2>
-
-Thank you for choosing Spark!</br>
-Spark is a full-features instant messaging (IM) and groupchat client that uses the XMPP protocol.</br>
-Further information can be found on the <a href="http://www.igniterealtime.org/projects/spark">Spark website.</a></br>
+Spark is a feature rich instant messaging (IM) and group chat client that uses the XMPP protocol.</br>
+Further information can be found on the <a href="https://www.igniterealtime.org/projects/spark/index.jsp">Spark website</a>.</br>
 
 <h2>Changelog</h2>
 View the <a href="changelog.html">changelog</a> for a list of changes since the last release. 
 
 <h2>Support</h2>
-Free support is provided by the Spark community in the <a href="http://www.igniterealtime.org/forum/forum.jspa?forumID=49">online forums</a>.
+Free support is provided by the Spark community in the <a href="https://community.igniterealtime.org/community/support/spark_support">forums</a>.
 
 <h2>License Agreements</h2>
 The Spark source code is governed by the Apache-License 2, which can be found in the <a href="LICENSE.html">LICENSE.html</a> file in this distribution.<br/>
