SPARK-2051 add jxbrowser info ro readme

--- a/core/src/documentation/README.html
+++ b/core/src/documentation/README.html
@@ -181,6 +181,10 @@ hr {
 Spark is a feature rich instant messaging (IM) and group chat client that uses the XMPP protocol.</br>
 Further information can be found on the <a href="https://www.igniterealtime.org/projects/spark/index.jsp">Spark website</a>.</br>
 
+Spark uses JxBrowser http://www.teamdev.com/jxbrowser, which is a proprietary software, owned by TeamDev Ltd.</br>
+The use of JxBrowser is governed by JxBrowser Product Licence Agreement http://www.teamdev.com/jxbrowser-licence-agreement.</br>
+You may not use JxBrowser separately from the Spark project without explicit permission of TeamDev Ltd.    
+    
 <h2>Changelog</h2>
 View the <a href="changelog.html">changelog</a> for a list of changes since the last release. 
 
