--- a/core/src/documentation/README.html
+++ b/core/src/documentation/README.html
@@ -179,10 +179,10 @@ hr {
 
 <div id="pageBody">
 Spark is a feature rich instant messaging (IM) and group chat client that uses the XMPP protocol.</br>
-Further information can be found on the <a href="https://www.igniterealtime.org/projects/spark/index.jsp">Spark website</a>.</br>
+Further information can be found on the <a href="https://www.igniterealtime.org/projects/spark/index.jsp">Spark website</a>.</br></br>
 
-Spark uses JxBrowser http://www.teamdev.com/jxbrowser, which is a proprietary software, owned by TeamDev Ltd.</br>
-The use of JxBrowser is governed by JxBrowser Product Licence Agreement http://www.teamdev.com/jxbrowser-licence-agreement.</br>
+Spark uses JxBrowser <a href="http://www.teamdev.com/jxbrowser"http://www.teamdev.com/jxbrowser</a>, which is a proprietary software, owned by TeamDev Ltd.</br>
+The use of JxBrowser is governed by JxBrowser Product Licence Agreement <a href="http://www.teamdev.com/jxbrowser-licence-agreement">http://www.teamdev.com/jxbrowser-licence-agreement</a>.</br>
 You may not use JxBrowser separately from the Spark project without explicit permission of TeamDev Ltd.    
     
 <h2>Changelog</h2>
