SPARK-2062 update legacy community HTTP links

--- a/core/src/documentation/README.html
+++ b/core/src/documentation/README.html
@@ -185,7 +185,7 @@ Further information can be found on the <a href="https://www.igniterealtime.org/
 View the <a href="changelog.html">changelog</a> for a list of changes since the last release. 
 
 <h2>Support</h2>
-Free support is provided by the Spark community in the <a href="https://community.igniterealtime.org/community/support/spark_support">forums</a>.
+Free support is provided by the Spark community in the <a href="https://discourse.igniterealtime.org/c/spark/spark-support">forums</a>.
 
 <h2>License Agreements</h2>
 The Spark source code is governed by the Apache-License 2, which can be found in the <a href="LICENSE.html">LICENSE.html</a> file in this distribution.<br/>
