Adding Visual Studio Code documentation

--- a/core/src/documentation/ide-vscode-setup.html
+++ b/core/src/documentation/ide-vscode-setup.html
@@ -91,7 +91,7 @@
         </figure>
 
         <p>
-            VS Code will automatically recognize and process the Maven structure of Spark (pom.xml file) and it will download automatically all dependencies.
+            VS Code will automatically recognize and process the Maven structure of Spark (pom.xml file) and it will automatically download all dependencies.
         </p>
 	    
         <h2>Run Spark from VS Code</h2>
