Adding Visual Studio Code documentation

--- a/core/src/documentation/ide-vscode-setup.html
+++ b/core/src/documentation/ide-vscode-setup.html
@@ -46,7 +46,7 @@
             Visual Studio Code or VS Code is a fast editor and ships with great editing features. It includes support for debugging,
             embedded Git control, syntax highlighting, intelligent code completion, snippets, and code refactoring. 
             In part thanks to the huge ecosystem of extensions that enhance and enrich the experience in VS Code, 
-            turning it into a super smart text editor, fast and lightweight. this guide focuses on the bare minimum that 
+            turning it into a super smart text editor, fast and lightweight. This guide focuses on the bare minimum that 
             is needed to get started Spark source code with VS Code.
         </p>
 
