Add a note about certs and plugins

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,14 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.9.0    -- <span style="font-weight: normal;">tbd</span></h2>
+    <p><b>Note:</b> This version is not accepting self-signed certificates by default. If you are using such, your users will have
+    to go to Advanced menu on login screen, Certificates tab and check the "Accept self-signed" option. Also OTR and
+    Spellchecker plugins are not included anymore (have no current Maven artifacts to use).</p>
+<h2>        Bug
+</h2>
+<ul>
+    
 <h2>2.8.3    -- <span style="font-weight: normal;">January 29, 2017</span></h2>
 <h2>        Bug
 </h2>
