Add date stamp ticket to 2.9.0

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -271,6 +271,8 @@ hr {
 <h2>        Improvement
 </h2>
 <ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-939'>SPARK-905</a>] -         Add date stamp for current messages
+</li>
 <li>[<a href='https://issues.igniterealtime.org/browse/SPARK-939'>SPARK-939</a>] -         Stretch and move Find dialog
 </li>
 <li>[<a href='https://issues.igniterealtime.org/browse/SPARK-945'>SPARK-945</a>] -         Preferences, broadcast, profile windows should be saving their sizes and positions
