Denote Spark 2.9.1 Release

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,19 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.9.1    -- <span style="font-weight: normal;">August 25, 2020</span></h2>
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2139'>SPARK-2139</a>] -         Reversi: IndexOutOfBoundError and user can make consecutive moves
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2148'>SPARK-2148</a>] -         History chat transcript displays own JID instead of nickname
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2149'>SPARK-2149</a>] -         User is Online/Offline toast popups not working properly
+</li>
+</ul>
+
+
 <h2>2.9.0    -- <span style="font-weight: normal;">August 17, 2020</span></h2>
 
 <h2>        Bug
