Denote Spark 2.9.2 Release

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,30 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.9.2    -- <span style="font-weight: normal;">August 30, 2020</span></h2>
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2154'>SPARK-2154</a>] -         Offline messages not being shown
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2156'>SPARK-2156</a>] -         Incorrect comparison of server address
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2157'>SPARK-2157</a>] -         Incorrect comparison of agent JID
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2158'>SPARK-2158</a>] -         Incorrect comparison of version identifier in plugin dependency parsing
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2159'>SPARK-2159</a>] -         Incorrect comparison of group chat particpant JIDs
+</li>
+</ul>
+                    
+<h2>        Improvement
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2155'>SPARK-2155</a>] -         Don&#39;t hide runtime exceptions while processing incoming stanzas.
+</li>
+</ul>
+
+
 <h2>2.9.1    -- <span style="font-weight: normal;">August 25, 2020</span></h2>
 <h2>        Bug
 </h2>
