--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -394,7 +394,7 @@ hr {
 </li>
 <li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2047'>SPARK-2047</a>] -         Improve on version detection
 </li>
-<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2052'>SPARK-2052</a>] -         Updated Brazilian Portguese translation
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2052'>SPARK-2052</a>] -         Updated Brazilian Portuguese translation
 </li>
 <li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2062'>SPARK-2062</a>] -         Fix legacy links to community.igniterealtime.org
 </li>
