Denote Spark 2.9.3 Release

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,48 @@ hr {
 
 <div id="pageBody">
 
+<h2>2.9.3    -- <span style="font-weight: normal;">October 24, 2020</span></h2>
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2064'>SPARK-2064</a>] -         Should reconnect to rooms after a reconnect to server
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2143'>SPARK-2143</a>] -         Contacts marked in red and duplicated during a reconnect
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2153'>SPARK-2153</a>] -         Private messaging not working in group chat
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2162'>SPARK-2162</a>] -         History issues for contacts with spaces in usernames
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2167'>SPARK-2167</a>] -         Hostname field shouln&#39;t be editable after a failed auto-login attempt when disabled
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2174'>SPARK-2174</a>] -         Old presence shown in the opened chat window after a reconnect
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2177'>SPARK-2177</a>] -         Incorrect own presence state during and after a reconnection
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2179'>SPARK-2179</a>] -         System message about incoming buzz is incorrectly escaping spaces
+</li>
+</ul>
+                
+<h2>        Task
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2178'>SPARK-2178</a>] -         Update junit to 4.13.1
+</li>
+</ul>
+    
+<h2>        Improvement
+</h2>
+<ul>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2165'>SPARK-2165</a>] -         Clean up grammar and typos in translation variables
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2168'>SPARK-2168</a>] -         Make Spark save file transfer events to history
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2169'>SPARK-2169</a>] -         Network addresses enclosed in quotes should be presented correctly
+</li>
+<li>[<a href='https://issues.igniterealtime.org/browse/SPARK-2172'>SPARK-2172</a>] -         Shouldn&#39;t switch to new tab when first MUC private message arrives
+</li>
+</ul>
+
 <h2>2.9.2    -- <span style="font-weight: normal;">August 30, 2020</span></h2>
 <h2>        Bug
 </h2>
