Denote release 3.0.0-beta

--- a/core/src/documentation/changelog.html
+++ b/core/src/documentation/changelog.html
@@ -179,6 +179,41 @@ hr {
 
 <div id="pageBody">
 
+<h2>3.0.0 Beta    -- <span style="font-weight: normal;">April 26, 2021</span></h2>
+<h2>Bug</h2>
+<ul>
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2222'>SPARK-2222</a>] Number of unread messages not being shown in the first tab title</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2207'>SPARK-2207</a>] Display the correct name for the transferred file</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2161'>SPARK-2161</a>] Spark locks up when downloading Pade Meetings libraries</li>
+</ul>
+
+<h2>Improvement</h2>
+<ul>
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2221'>SPARK-2221</a>] Increase default Idle value to 5 instead of 3 minutes</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2217'>SPARK-2217</a>] Update Russian translation</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2216'>SPARK-2216</a>] IBB file transfer should not be enabled by default</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2214'>SPARK-2214</a>] Look and feel refresh</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2210'>SPARK-2210</a>] Replace deprecated Base64 Decoder</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2204'>SPARK-2204</a>] Code cleanup</li>
+</ul>
+<h2>New Feature</h2>
+<ul>
+<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-1828'>SPARK-1828</a>] Bundle Pade Meetings plugin</li>
+</ul>
+<h2>Task</h2>
+<ul>
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2206'>SPARK-2206</a>] Update xstream to 1.4.15</li>
+
+	<li>[<a href='https://igniterealtime.atlassian.net/browse/SPARK-2205'>SPARK-2205</a>] Update install4j runtime library to 8.0.7</li>
+</ul>
+
 <h2>2.9.4    -- <span style="font-weight: normal;">November 14, 2020</span></h2>
 <h2>        Bug
 </h2>
